--- a/product-page/index.html
+++ b/product-page/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav class="nav">
-        <img src="/assets/logo-temp.png" alt="#" />
+        <div class="logo"></div>
         <ul>
           <li class="nav-list"><a class="nav-item link" href="#">Coffee</a></li>
         </ul>
