--- a/product-page/index.html
+++ b/product-page/index.html
@@ -21,27 +21,29 @@
           <li class="nav-list"><a class="nav-item link" href="#">Sweets</a></li>
         </ul>
         <p class="total">Total:</p>
-        <button class="checkout-btn">Check out</button>
+        <button class="checkout-btn btn">Check out</button>
       </nav>
     </header>
     <section class="main">
-      <div class="product-menu">
-        <h2>Coffee</h2>
-        <button data-cost="2" class="button cart-btn">Add to cart</button>
-      </div>
-      <div class="product-menu">
-        <h2>Scone</h2>
-        <button data-cost="3" class="cart-btn button">Add to cart</button>
-      </div>
-      <div class="product-menu">
-        <h2>Matcha Latte</h2>
-        <button data-cost="4" class="cart-btn button">Add to cart</button>
-      </div>
-      <div class="product-menu">
-        <h2>3pk Cookies</h2>
-        <button data-cost="5" class="cart-btn button">Add to cart</button>
+      <div class="product-menu-container">
+        <div class="product-menu">
+          <h2>Coffee</h2>
+          <button data-cost="2" class="button cart-btn btn">Add to cart</button>
+        </div>
+        <div class="product-menu">
+          <h2>Scone</h2>
+          <button data-cost="3" class="cart-btn button btn">Add to cart</button>
+        </div>
+        <div class="product-menu">
+          <h2>Matcha Latte</h2>
+          <button data-cost="4" class="cart-btn button btn">Add to cart</button>
+        </div>
+        <div class="product-menu">
+          <h2>3pk Cookies</h2>
+          <button data-cost="5" class="cart-btn button btn">Add to cart</button>
+        </div>
       </div>
     </section>
-    <script src="product.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
