--- a/product-page/index.html
+++ b/product-page/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+  </header>
+  
+    <div class="checkout-container">
+      <div class="checkout-popup-div">
+        <button type="button" class="delete hide-checkout btn">X</button>
+        <p class="pop-up-p">Thank you for shopping.  Your order total is below.</p>
+        <p class="pop-up-p">Click X to exit.  </p>
+        <p class=" pop-up-p"><span class="total-span">Total:</span></p>
+      </div>
+    </div>
     <header>
       <nav class="nav">
         <div class="logo"></div>
@@ -21,10 +31,9 @@
           <li class="nav-list"><a class="nav-item link" href="#">Sweets</a></li>
         </ul>
         <p class="total">Total:</p>
-        <button class="checkout-btn btn">Check out</button>
+        <button class="checkout-btn btn show-checkout">Check out</button>
       </nav>
-    </header>
-    <section class="main">
+      <section class="main">
       <div class="product-menu-container">
         <div class="product-menu">
           <h2>Coffee</h2>
