changed some styling added devyou img

--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevYou Cafe</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <nav class="nav">
-        <div class="logo">Website image placeholder</div>
+        <div class="logo">
+          <h1 class="logo-text">DevYou <span class="logo-span">Cafe</span></h1>
+        </div>
         <ul>
           <li class="nav-list"><a class="nav-item link" href="#">Coffee</a></li>
         </ul>
@@ -25,7 +32,10 @@
     <main>
       <section class="about-container">
         <div class="about-image-container">
-          <img class="about-img" src="./assets/logo-temp.png" />
+          <img
+            class="about-img"
+            src="./assets/DevYou2020_Logo_with_border.png"
+          />
         </div>
         <div class="about-text-container">
           <h2>Dev You Cafe</h2>
@@ -39,17 +49,17 @@
       <section class="menus-container">
         <div class="menu">
           <h2 class="menu-title">Coffee</h2>
-          <img class="menu-img" src="./assets/logo-temp.png" alt="temp" />
+          <img class="menu-img" src="./assets/coffee.png" alt="coffee cup" />
           <a class="menu-link" href="#">View Menu</a>
         </div>
         <div class="menu">
           <h2 class="menu-title">Tea</h2>
-          <img class="menu-img" src="./assets/logo-temp.png" alt="temp" />
+          <img class="menu-img" src="./assets/tea.png" alt="tea cup" />
           <a class="menu-link" href="#">View Menu</a>
         </div>
         <div class="menu">
           <h2 class="menu-title">Sweets</h2>
-          <img class="menu-img" src="./assets/logo-temp.png" alt="temp" />
+          <img class="menu-img" src="./assets/sweets.png" alt="cake tray" />
           <a class="menu-link" href="#">View Menu</a>
         </div>
       </section>
