--- a/product-page/index.html
+++ b/product-page/index.html
@@ -16,9 +16,10 @@
     <div class="checkout-container">
       <div class="checkout-popup-div">
         <button type="button" class="delete hide-checkout btn">X</button>
-        <p class="pop-up-p">Your order has been placed!</p>
-        <p class="pop-up-p"><span class="total-span">Your total is:</span></p>
-        <p class="pop-up-p">Click X to exit.</p>
+        <div class="pop-up-text">
+          <p class="pop-up-p">Your order has been placed!</p>
+          <p class="pop-up-p"><span class="total-span">Your total is:</span></p>
+        </div>
       </div>
     </div>
     <header>
