--- a/product-page/index.html
+++ b/product-page/index.html
@@ -43,60 +43,74 @@
         <p class="total">Total:</p>
         <button class="checkout-btn btn show-checkout">Check out</button>
       </div>
-      <section class="product-menu-container">
-        <div class="product">
-          <h2 class="product-title">Drip Coffee</h2>
-          <img
-            class="product-img"
-            src="../assets/products/coffee-product.jpeg"
-            alt="coffee cup"
-          />
-          <button data-cost="2" class="button cart-btn btn">Add to cart</button>
-        </div>
-        <div class="product">
-          <h2 class="product-title">Hot Tea</h2>
-          <img
-            class="product-img"
-            src="../assets/products/tea-product.jpeg"
-            alt="tea cup"
-          />
-          <button data-cost="2" class="button cart-btn btn">Add to cart</button>
-        </div>
-        <div class="product">
-          <h2 class="product-title">Matcha Latte</h2>
-          <img
-            class="product-img"
-            src="../assets/products/matcha-product.jpeg"
-            alt="cake tray"
-          />
-          <button data-cost="4" class="button cart-btn btn">Add to cart</button>
-        </div>
-        <div class="product">
-          <h2 class="product-title">Latte</h2>
-          <img
-            class="product-img"
-            src="../assets/products/latte-product.jpeg"
-            alt="cake tray"
-          />
-          <button data-cost="4" class="button cart-btn btn">Add to cart</button>
-        </div>
-        <div class="product">
-          <h2 class="product-title">Cupcake</h2>
-          <img
-            class="product-img"
-            src="../assets/products/cupcake-product.jpeg"
-            alt="cake tray"
-          />
-          <button data-cost="3" class="button cart-btn btn">Add to cart</button>
-        </div>
-        <div class="product">
-          <h2 class="product-title">Cookie 3pk</h2>
-          <img
-            class="product-img"
-            src="../assets/products/cookies-product.jpeg"
-            alt="cake tray"
-          />
-          <button data-cost="5" class="button cart-btn btn">Add to cart</button>
+      <section class="product-section">
+        <div class="product-menu-container">
+          <div class="product">
+            <h2 class="product-title">Drip Coffee</h2>
+            <img
+              class="product-img"
+              src="../assets/products/coffee-product.jpeg"
+              alt="coffee cup"
+            />
+            <button data-cost="2" class="button cart-btn btn">
+              Add to cart
+            </button>
+          </div>
+          <div class="product">
+            <h2 class="product-title">Hot Tea</h2>
+            <img
+              class="product-img"
+              src="../assets/products/tea-product.jpeg"
+              alt="tea cup"
+            />
+            <button data-cost="2" class="button cart-btn btn">
+              Add to cart
+            </button>
+          </div>
+          <div class="product">
+            <h2 class="product-title">Matcha Latte</h2>
+            <img
+              class="product-img"
+              src="../assets/products/matcha-product.jpeg"
+              alt="cake tray"
+            />
+            <button data-cost="4" class="button cart-btn btn">
+              Add to cart
+            </button>
+          </div>
+          <div class="product">
+            <h2 class="product-title">Latte</h2>
+            <img
+              class="product-img"
+              src="../assets/products/latte-product.jpeg"
+              alt="cake tray"
+            />
+            <button data-cost="4" class="button cart-btn btn">
+              Add to cart
+            </button>
+          </div>
+          <div class="product">
+            <h2 class="product-title">Cupcake</h2>
+            <img
+              class="product-img"
+              src="../assets/products/cupcake-product.jpeg"
+              alt="cake tray"
+            />
+            <button data-cost="3" class="button cart-btn btn">
+              Add to cart
+            </button>
+          </div>
+          <div class="product">
+            <h2 class="product-title">Cookie 3pk</h2>
+            <img
+              class="product-img"
+              src="../assets/products/cookies-product.jpeg"
+              alt="cake tray"
+            />
+            <button data-cost="5" class="button cart-btn btn">
+              Add to cart
+            </button>
+          </div>
         </div>
       </section>
     </main>
