some style preferences changed

--- a/product-page/index.html
+++ b/product-page/index.html
@@ -52,6 +52,7 @@
               src="../assets/products/coffee-product.jpeg"
               alt="coffee cup"
             />
+            <p class="product-text">Price : $2</p>
             <button data-cost="2" class="button cart-btn btn">
               Add to cart
             </button>
@@ -63,6 +64,7 @@
               src="../assets/products/tea-product.jpeg"
               alt="tea cup"
             />
+            <p class="product-text">Price : $2</p>
             <button data-cost="2" class="button cart-btn btn">
               Add to cart
             </button>
@@ -74,6 +76,7 @@
               src="../assets/products/matcha-product.jpeg"
               alt="cake tray"
             />
+            <p class="product-text">Price : $4</p>
             <button data-cost="4" class="button cart-btn btn">
               Add to cart
             </button>
@@ -85,6 +88,7 @@
               src="../assets/products/latte-product.jpeg"
               alt="cake tray"
             />
+            <p class="product-text">Price : $4</p>
             <button data-cost="4" class="button cart-btn btn">
               Add to cart
             </button>
@@ -96,6 +100,7 @@
               src="../assets/products/cupcake-product.jpeg"
               alt="cake tray"
             />
+            <p class="product-text">Price : $3</p>
             <button data-cost="3" class="button cart-btn btn">
               Add to cart
             </button>
@@ -107,6 +112,7 @@
               src="../assets/products/cookies-product.jpeg"
               alt="cake tray"
             />
+            <p class="product-text">Price : $5</p>
             <button data-cost="5" class="button cart-btn btn">
               Add to cart
             </button>
