prettier issue fixed

--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
         <div class="logo">
           <h1 class="logo-text">DevYou <span class="logo-span">Cafe</span></h1>
         </div>
-        <ul>
+        <ul class="nav-parent">
           <li class="nav-list"><a class="nav-item link" href="#">Coffee</a></li>
-        </ul>
-        <ul>
+
           <li class="nav-list"><a class="nav-item link" href="#">Tea</a></li>
-        </ul>
-        <ul>
+
           <li class="nav-list"><a class="nav-item link" href="#">Sweets</a></li>
         </ul>
       </nav>
